Fix intro name clipping

--- a/src/style.css
+++ b/src/style.css
@@ -122,9 +122,11 @@ button{ font:inherit; }
 }
 
 .writeName {
-  left:calc(50% - 3cm);
+  left:calc(50% - 2cm);
   bottom:calc(env(safe-area-inset-bottom, 0px) + 44px - 1cm);
-  width:min(100%, 320px);
+  width:fit-content;
+  max-width:calc(100vw - 1cm);
+  padding-inline:0.3cm;
   font-size:clamp(34px, 8.8vw, 54px);
   line-height:1.18;
   text-align: center;
